2000-05-05  Ettore Perazzoli  <ettore@helixcode.com>

	* Added `--enable-purify' flag.

2000-05-05  Chris Toshok <toshok@helixcode.com>
	
	* shell/Makefile.am: add support for building purified evolution.

	* shell/.cvsignore: ignore evolution.pure

2000-05-05  Chris Toshok <toshok@helixcode.com>

	* addressbook/backend/ebook/.cvsignore,
	addressbook/contact-editor/.cvsignore,
	addressbook/gui/component/.cvsignore,
	addressbook/gui/minicard/.cvsignore,
	addressbook/printing/.cvsignore,
	calendar/cal-client/.cvsignore,
	calendar/gui/.cvsignore,
	calendar/pcs/.cvsignore,
	filter/.cvsignore,
	mail/.cvsignore,
	shell/.cvsignore,
	tests/.cvsignore,
	widgets/e-table/.cvsignore,
	widgets/e-text/.cvsignore,
	widgets/meeting-time-sel/.cvsignore,
	widgets/shortcut-bar/.cvsignore,
	wombat/.cvsignore: ignore the .pure directory

2000-05-04  Dan Winship  <danw@helixcode.com>

	* configure.in: Oops. The Kerberos check was succeeding when it
	shouldn't have (and thus breaking the pop3 build for "normal"
	people). Fix.

2000-05-03  Michael Meeks  <michael@helixcode.com>

	* configure.in (xmlversion): Fix to remove older 'libxml' prefix.

2000-05-02  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Do not output `doc/Makefile' because there is
	nothing to generate it from.

2000-05-02  Dan Winship  <danw@helixcode.com>

	* configure.in, acconfig.h: add some minimal Kerberos checking.
	This isn't intended to be generically useful at this point, it's
	just there to give me a second POP auth mechanism to play with.

	Also remove a bit of cruft, and reorganize configure.in a bit.

2000-05-02  NotZed  <NotZed@HelixCode.com>

	* tests/test13.c: And here too.

	* tests/test2.c (main): REmoved gmime-utils.h

	* tests/Makefile.am (LDADD): Add libeutil to default link line.
	(test_movemail_LDADD): Fixed order for libutil linking.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* tests/Makefile.am: set G_LOG_DOMAIN.
	* tests/ui-tests/Makefile.am: same.