@@ -201,8 +201,7 @@ struct _EText {
 struct _ETextClass {
 	GnomeCanvasItemClass parent_class;
 
-	void (* resize) (EText *text);
-	void (* change) (EText *text);
+	void (* changed) (EText *text);
 };
 
 
